--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 <body id="gradient">
 	<h1>Background<br>Generator</h1>
 	<h2>Choose your colours!</h2>
-	<input class="color1" type="color" name="color1" value="#F7F7F7">
-	<input class="color2" type="color" name="color2" value="#1CECEC"><br>
+	<input class="color1" type="color" name="color1" value="#B69907">
+	<input class="color2" type="color" name="color2" value="#C76C05"><br>
 	<button class="random"> Pick Random! </button><br>
 	<div class = "h3Box">
 		<h3></h3><hr>
 		<a class = "copy-btn"> Try it Yourself! click here </a>
 	</div><br>
-
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
